<resources>
    <string name="app_name">FirebaseMessage</string>
    <string name="lbl_icon_menu">icon_menu</string>
    <string name="lbl_home">Home</string>
    <string name="lbl_chat">Chat</string>
    <string name="lbl_friend">Friends</string>
    <string name="lbl_setting">Cài đặt</string>
    <string name="lbl_map">Bản đồ</string>
    <string name="lbl_favorite_history">History</string>
    <string name="lbl_search">Search</string>
    <string name="lbl_image">Image</string>
    <string name="lbl_about">About</string>
    <string name="lbl_logout">Logout</string>
    <string name="lbl_close">Close</string>
    <string name="lbl_notification">Notification</string>
    <string name="default_notification_channel_id">SangTB.notification.demo</string>
    <string name="channel_description">Firebase messaging receive notification</string>
    <string name="lbl_cinema">Rạp phim</string>
    <string name="lbl_ticket">Tickets</string>
    <string name="movie_tickets_everyday">Đặt Vé Mỗi Ngày</string>
    <string name="manyAttractiveAenresƯelcomeYou">Nhiều thể loại hấp dẫn chào đón bạn</string>
    <string name="youHaventAccount">Bạn không có tài khoản?</string>
    <string name="signUp">Đăng Ký</string>
    <string name="continue_with_email">Tiếp tục với email</string>
    <string name="lbl_login">Login</string>
    <string name="lbl_email">Email</string>
    <string name="hint_email">Nhập email</string>
    <string name="hint_password">Nhập mật khẩu</string>
    <string name="password">Mật Khẩu</string>
    <string name="for_got_password">Quên mật khẩu ?</string>
    <string name="lbl_register">Đăng Ký</string>
    <string name="phone">Số ĐT</string>
    <string name="hint_phone">Nhập số điện thoại</string>
    <string name="lbl_ok">Đồng ý</string>
    <string name="lbl_dialog">Thông Báo</string>
    <string name="account_is_not_valid_or_not_exit">Tài khoản không hợp lệ hoặc không tồn tại</string>
    <string name="value_is_not_valid">Giá trị không hợp lệ</string>
    <string name="lbl_film">Phim</string>
    <string name="lbl_my_location">Vị trí của tôi</string>
    <string name="please_enable_gps">Vui lòng bật gps để sử dụng</string>
    <string name="lbl_permission">Vui lòng cung cấp quyền google service</string>
    <string name="MAP_API_KEY">AIzaSyA-9wbN8tfmS1DhvjeEhSOa6gYo8SwGw9Y</string>
    <string name="lbl_search_cenime">Tìm kiếm rạp phim</string>
    <string name="lbl_directional">Điều hướng</string>
    <string name="overview">Tổng quan</string>
    <string name="notification">Thông báo</string>
    <string name="display">Hiển thị</string>
    <string name="default_system">Mặc định hệ thống</string>
    <string name="language">Ngôn ngữ</string>
    <string name="vietnam">Việt nam</string>
    <string name="remove_cache">Xóa bộ nhớ cache</string>
    <string name="hotline">Đường dây nóng</string>
    <string name="hotline_phone">0366426402</string>
    <string name="other">Khác</string>
    <string name="version">Phiên bản</string>
    <string name="share">Chia xẽ</string>
    <string name="privacy">Bảo mật</string>
    <string name="lbl_language">Ngôn ngữ</string>
    <string name="english">English</string>
    <string name="vietname">Việt Nam</string>
    <string name="lbl_synopsis">Mo ta:</string>
    <string name="hanhdong">Hành động</string>
    <string name="ten_phim_1">John Wick: Chapter 4</string>
    <string name="ngay">24/03/2023</string>
    <string name="please_choice_chair">Vui lòng chọn ghế</string>
    <string name="register_success">Đăng ký thành công</string>
    <string name="pay_success">Bạn đã thanh toán thành công</string>
    <string name="price">Giá:= 75.000 * </string>
    <string name="lbl_website">Trang chủ</string>
    <string name="lbl_fanpage">Fanpage</string>
    <string name="lbl_policy">Bảo mật</string>
</resources>