<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/map"
            android:icon="@drawable/ic_map"
            android:title="@string/lbl_map" />
        <item
            android:id="@+id/favorite"
            android:icon="@drawable/ic_favorite"
            android:title="@string/lbl_favorite_history" />
        <item
            android:id="@+id/fanpage"
            android:icon="@drawable/ic_fanpage"
            android:title="@string/lbl_fanpage" />
    </group>

    <group
        android:checkableBehavior="single"
        android:id="@+id/group_account"
     >
        <item
            android:id="@+id/policy"
            android:icon="@drawable/ic_about"
            android:title="@string/lbl_policy" />
        <item
            android:id="@+id/setting"
            android:icon="@drawable/ic_setting"
            android:title="@string/lbl_setting" />
    </group>

    <group>
        <item
            android:id="@+id/logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/lbl_logout" />
    </group>
</menu>