<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="android.view.View"/>
        <variable
            name="vm"
            type="com.conchonha.bookmovietickets.viewmodel.AuthViewModel" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:background="@drawable/img_background_form"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#6A000000"
            >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/img_back"
                android:foreground="?attr/selectableItemBackground"
                android:clickable="true"
                android:layout_margin="5dp"
                android:src="@drawable/ic_back" />

            <TextView
                android:fontFamily="@font/black_and_white_picture"
                android:id="@+id/txt_title"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="33dp"
                android:layout_marginBottom="62dp"
                android:gravity="center"
                android:text="@{vm.isLogin? @string/lbl_login : @string/lbl_register}"
                android:textColor="#FFFFFF"
                android:textSize="48sp" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_below="@id/txt_title"
                android:layout_centerInParent="true"
                android:layout_height="wrap_content">

                <androidx.cardview.widget.CardView
                    android:id="@+id/linelogin2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    app:cardBackgroundColor="#80171616"
                    app:cardCornerRadius="30dp"
                    app:cardElevation="5dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:orientation="vertical"
                        android:paddingLeft="11dp"
                        android:paddingTop="74dp"
                        android:paddingRight="11dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/lbl_email"
                                android:textColor="#FFFFFF"
                                android:textSize="16sp" />

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="40dp"
                                android:layout_marginTop="10dp"
                                android:background="@drawable/boder_edit"
                                android:orientation="horizontal">

                                <ImageView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center"
                                    android:layout_marginLeft="10dp"
                                    android:scaleType="fitXY"
                                    android:src="@drawable/people_outline_24px" />

                                <EditText
                                    android:id="@+id/edt_email"
                                    android:inputType="textEmailAddress"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:hint="@string/hint_email"
                                    android:text="@={vm.email}"
                                    android:paddingLeft="10dp"
                                    android:textColor="#000000"
                                    android:textSize="10sp" />
                            </LinearLayout>
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginTop="@dimen/_20dp"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/password"
                                android:textColor="#FFFFFF"
                                android:textSize="16sp" />

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="40dp"
                                android:layout_marginTop="10dp"
                                android:background="@drawable/boder_edit"
                                android:orientation="horizontal">

                                <ImageView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center"
                                    android:layout_marginLeft="10dp"
                                    android:scaleType="fitXY"
                                    android:src="@drawable/vpn_key_24px" />

                                <EditText
                                    android:id="@+id/edt_password"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:hint="@string/hint_password"
                                    android:inputType="textPassword"
                                    android:paddingLeft="10dp"
                                    android:text="@={vm.pass}"
                                    android:password="true"
                                    android:textColor="#000000"
                                    android:textSize="10sp" />
                            </LinearLayout>
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginTop="@dimen/_20dp"
                            android:visibility="@{vm.isLogin? View.GONE : View.VISIBLE}"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/phone"
                                android:textColor="#FFFFFF"
                                android:textSize="16sp" />

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="40dp"
                                android:layout_marginTop="10dp"
                                android:background="@drawable/boder_edit"
                                android:orientation="horizontal">

                                <ImageView
                                    android:layout_width="@dimen/_15dp"
                                    android:layout_height="@dimen/_20dp"
                                    android:layout_gravity="center"
                                    android:layout_marginLeft="10dp"
                                    android:scaleType="fitXY"
                                    android:src="@drawable/ic_phone" />

                                <EditText
                                    android:id="@+id/edt_phone"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:hint="@string/hint_phone"
                                    android:inputType="phone"
                                    android:paddingLeft="10dp"
                                    android:text="@={vm.phone}"
                                    android:password="true"
                                    android:textColor="#000000"
                                    android:textSize="10sp" />
                            </LinearLayout>
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/txt_forgotPassword"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="16dp"
                                android:gravity="center"
                                android:visibility="@{vm.isLogin? View.VISIBLE : View.GONE}"
                                android:foreground="?attr/selectableItemBackground"
                                android:clickable="true"
                                android:text="@string/for_got_password"
                                android:textColor="#FFFFFF" />

                            <androidx.appcompat.widget.AppCompatButton
                                android:id="@+id/btn_login"
                                android:layout_width="match_parent"
                                android:layout_height="38dp"
                                android:layout_marginLeft="83dp"
                                android:foreground="?attr/selectableItemBackground"
                                android:clickable="true"
                                android:layout_marginTop="@dimen/_20dp"
                                android:layout_marginRight="83dp"
                                android:layout_marginBottom="@dimen/_20sdp"
                                android:background="@drawable/border_send"
                                android:gravity="center"
                                android:onClick="@{()->vm.onClick()}"
                                android:text="@{vm.isLogin? @string/lbl_login : @string/lbl_register}"
                                android:textColor="#FFFFFF"
                                android:textSize="18sp" />
                        </LinearLayout>

                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </RelativeLayout>

        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>
</layout>